# rag-prototype

./: .env.example  .gitignore  LICENSE  README.md  config.py  document.txt  pyproject.toml  test_chunking.py
.github/: copilot-instructions.md
docs/: SETUP-GUIDE.md  TEST_CASES.md  implementation-notes.md  rag-prototype-notes.txt  setup-guide.md
offline/: __init__.py  chunking.py  embedding.py  indexing.py
online/: generation.py  query.py  retrieval.py
scripts/: run_indexing.py  run_query.py  setup.py
tests/: __init__.py  test_chunking.py  test_embedding.py  test_generation.py  test_indexing.py  test_query.py  test_retrieval.py
