[tool.poetry]
name = "rag-prototype"
version = "0.1.0"
description = "Full RAG pipeline with offline indexing and online query stages"
authors = ["Long Hoang <longhhoang1202@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
pinecone-client = "^3.0.0"
tiktoken = "^0.8.0"
nltk = "^3.8.0"
loguru = "^0.7.0"
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
